# uno_bot

./: .gitignore  pyproject.toml
src/: main.py  manager.py
src/comandos/: __init__.py  exemplo.py
test/: beta.py  cartas.py  jogos.py  regras.py  regras_uno.py  test.py
